differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr18809-1.c-5.4.0-0.out.txt
pr18809-1.c:6:17: error: parameter 1 (‘e’) has incomplete type
 void foo(enum E e) {}    
                 ^
